[package]
name = "json-prettifier"
version = "0.1.0"
authors = ["Benjamin Barnickel <dev@bx11.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
